--- a/app/src/main/res/layout/images.xml
+++ b/app/src/main/res/layout/images.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/image"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         android:adjustViewBounds="false"
         android:clickable="true"
         />
