--- a/app/src/main/res/layout/activity_image_picking.xml
+++ b/app/src/main/res/layout/activity_image_picking.xml
@@ -15,7 +15,7 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="https://stocksnap.io/"
+        android:text="https://stocksnap.io/search/cat"
         android:id="@+id/ETurl"
         android:layout_weight="0.7"
         android:gravity="center"/>
