--- a/app/src/main/res/layout/leaderboard_row.xml
+++ b/app/src/main/res/layout/leaderboard_row.xml
@@ -8,7 +8,7 @@
         android:id="@+id/nameTxt"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text="name"
+        android:text="@string/name"
         android:textSize="20sp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,7 +19,7 @@
         android:id="@+id/scoreTxt"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text="score"
+        android:text="@string/score"
         android:textSize="20sp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
