--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Credits"
+        android:text="@string/credit"
         android:textSize="60dp"
         android:textAlignment="center"/>
 
@@ -46,8 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:layout_marginBottom="44dp"
-            android:text="Bianca Cao Zengyu \nDaryl Kouk Leong Jun \n Martin Ng Hong Yi \n Pwint Theingi Aung Win
-\n Wutt Yee Hnin Lwin \n Wu Yirui"
+            android:text="@string/members"
             android:textAlignment="center"
             android:textSize="30dp"
             app:layout_constraintTop_toBottomOf="@id/team8Members"
@@ -65,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/memberNames"
-            android:text="Licenses"
+            android:text="@string/Licenses"
             android:textSize="40dp"
             android:textAlignment="center"/>
     </LinearLayout>
@@ -82,7 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/licenseDetails"
-            android:text="License details etc"
+            android:text="@string/lincense_detail"
             android:textSize="30dp"
             android:textAlignment="center"/>
     </LinearLayout>
