--- a/app/src/main/res/layout/activity_image_picking.xml
+++ b/app/src/main/res/layout/activity_image_picking.xml
@@ -15,14 +15,14 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="https://stocksnap.io/search/cat"
+            android:text="@string/url"
             android:id="@+id/ETurl"
             android:layout_weight="0.7"
             android:gravity="center"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Fetch"
+            android:text="@string/fetchBtn"
             android:id="@+id/BTfetch"
             android:layout_weight="0.3"
             android:gravity="center"/>
