--- a/app/src/main/res/layout/dialogbox.xml
+++ b/app/src/main/res/layout/dialogbox.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Well play!"
+        android:text="@string/well_play"
         android:textAlignment="center"
         android:textSize="20sp"/>
 
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Score: "
+        android:text="@string/dia_Score"
         android:textAlignment="textEnd"
         android:textSize="20sp"
         android:layout_weight="0.5"/>
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="textStart"
-        android:text="20 points"
+        android:text="@string/dia_points"
         android:textSize="20sp"
         android:layout_weight="0.5"/>
     </LinearLayout>
@@ -56,7 +56,7 @@
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OK"
+        android:text="@string/ok"
         android:textSize="20sp" />
 
 </LinearLayout>
