--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -29,7 +29,7 @@
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:id="@+id/gridViewGame"
         android:columnWidth="0dp"
         android:gravity="center"
