--- a/app/src/main/res/layout/images.xml
+++ b/app/src/main/res/layout/images.xml
@@ -11,6 +11,7 @@
     android:scaleType="fitXY"
     android:adjustViewBounds="false"
     android:clickable="true"
+    android:background="@drawable/bg"
     />
 
 </LinearLayout>
