Fixed matching, tried implementing dialogbox but not successful (WuttYee take note)
Offload imageAdapter and all onclick events in Activity

--- a/app/src/main/res/layout/images.xml
+++ b/app/src/main/res/layout/images.xml
@@ -10,7 +10,7 @@
     android:id="@+id/image"
     android:scaleType="fitXY"
     android:adjustViewBounds="false"
-    android:clickable="true"
+    android:clickable="false"
     android:background="@drawable/bg"
     />
 
