--- a/app/src/main/res/layout/images2.xml
+++ b/app/src/main/res/layout/images2.xml
@@ -10,7 +10,7 @@
         android:id="@+id/image2"
         android:scaleType="fitXY"
         android:adjustViewBounds="false"
-        android:clickable="true"
+        android:clickable="false"
         android:background="@drawable/full_moon_party"
         />
 
