--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -9,8 +9,10 @@
     <TextView
         android:id="@+id/title_leaderboard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:text="@string/score"
+        android:background="#00BFFF"
+        android:textColor="#FFFFE0"
         android:textSize="20sp"
         android:gravity="center"
         android:textStyle="bold"
@@ -19,6 +21,8 @@
 
     <ListView
         android:id="@+id/listView"
+        android:background="#F0F8FF"
+        android:textColor="#FFFFE0"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/title_leaderboard"
