--- a/app/src/main/res/layout/dialogbox.xml
+++ b/app/src/main/res/layout/dialogbox.xml
@@ -4,20 +4,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:weightSum="10"
-    android:gravity="center">
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="5dp" />
+    android:gravity="center"
+    android:background="#F0F8FF">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/well_play"
         android:textAlignment="center"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
