--- a/app/src/main/res/layout/leaderboard_row.xml
+++ b/app/src/main/res/layout/leaderboard_row.xml
@@ -2,14 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.LeaderBoardActivity">
 
     <TextView
         android:id="@+id/nameTxt"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="@string/name"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -20,9 +22,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="@string/score"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/nameTxt"/>
+        app:layout_constraintLeft_toRightOf="@id/nameTxt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
