--- a/app/src/main/res/layout/incoming.xml
+++ b/app/src/main/res/layout/incoming.xml
@@ -17,9 +17,10 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:src="@drawable/home_animation"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/cat"
+        android:background="@drawable/full_moon_party"
         android:layout_gravity="center_vertical|center_horizontal"
         />
     <Button
