update notification and replace the logo as gif-BG in incoming.xml

--- a/app/src/main/res/layout/incoming.xml
+++ b/app/src/main/res/layout/incoming.xml
@@ -20,7 +20,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/cat"
-        android:background="@drawable/full_moon_party"
+        android:background="@drawable/logo"
         android:layout_gravity="center_vertical|center_horizontal"
         />
     <Button
