--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LeaderBoardActivity">
+    tools:context=".activity.LeaderBoardActivity"
+    android:background="@drawable/catwallpaper1">
 
     <TextView
         android:id="@+id/title_leaderboard"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="@string/score"
-        android:background="#00BFFF"
+        android:background="#778899"
         android:textColor="#FFFFE0"
         android:textSize="20sp"
         android:gravity="center"
@@ -22,11 +23,11 @@
     <ListView
         android:id="@+id/listView"
         style="@style/AppTheme"
-        android:background="#F0F8FF"
         android:textColor="#FFFFE0"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/title_leaderboard"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
