--- a/app/src/main/res/layout/images.xml
+++ b/app/src/main/res/layout/images.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+>
 
     <ImageView
     android:layout_width="match_parent"
@@ -12,6 +13,6 @@
     android:adjustViewBounds="false"
     android:clickable="false"
     android:background="@drawable/bg"
-    />
+   />
 
 </LinearLayout>
