--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:typeface">monospace</item>
-<!--        <item name="android:textSize">12pt</item>-->
+        <item name="android:textSize">15sp</item>
 <!--        <item name="android:textColor">#00FF00</item>/>-->
     </style>
 </resources>
