--- a/app/src/main/res/layout/images4.xml
+++ b/app/src/main/res/layout/images4.xml
@@ -24,7 +24,7 @@
             android:scaleType="fitXY"
             android:adjustViewBounds="false"
             android:clickable="false"
-            android:background="@drawable/full_moon_party"
+            android:background="@drawable/backimage"
             />
 
         <!-- Front Layout Goes Here -->
@@ -35,7 +35,7 @@
             android:scaleType="fitXY"
             android:adjustViewBounds="false"
             android:clickable="false"
-            android:background="@drawable/full_moon_party"
+            android:background="@drawable/backimage"
             />
 
     </com.wajahatkarim3.easyflipview.EasyFlipView>
