--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#ff0000</color>
     <color name="white"></color>
-    <color name="home_bg">fcfcfa</color>
+    <color name="home_bg">#fcfcfa</color>
 </resources>
