make button visible

--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -88,21 +88,22 @@
 
     <LinearLayout
         android:id="@+id/contact"
-        app:layout_constraintTop_toBottomOf="@id/licenseDetails"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:orientation="horizontal">
-    <Button
-        android:id="@+id/emailContact"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:text="Contact Us"
-        android:textSize="25dp"
-        tools:ignore="MissingConstraints"
-        />
+        <Button
+            android:id="@+id/emailContact"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Contact Us"
+            android:textSize="25dp"
+            tools:ignore="MissingConstraints"
+            />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
