--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/credits"
-        android:textSize="60dp"
+        android:textSize="40dp"
         android:textAlignment="center"/>
 
     <LinearLayout
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:text="Team 8 Members"
-            android:textSize="40dp"
+            android:textSize="30dp"
             android:textAlignment="center"/>
     </LinearLayout>
 
@@ -48,7 +48,7 @@
             android:layout_marginBottom="44dp"
             android:text="@string/members"
             android:textAlignment="center"
-            android:textSize="30dp"
+            android:textSize="18dp"
             app:layout_constraintTop_toBottomOf="@id/team8Members"
             tools:layout_editor_absoluteX="0dp" />
     </LinearLayout>
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/memberNames"
             android:text="@string/Licenses"
-            android:textSize="40dp"
+            android:textSize="30dp"
             android:textAlignment="center"/>
     </LinearLayout>
 
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/licenseDetails"
             android:text="@string/lincense_detail"
-            android:textSize="30dp"
+            android:textSize="18dp"
             android:textAlignment="center"/>
 
     </LinearLayout>
@@ -95,15 +95,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:orientation="horizontal">
-        <Button
-            android:id="@+id/emailContact"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="Contact Us"
-            android:textSize="25dp"
-            tools:ignore="MissingConstraints"
-            />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/emailContact"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Contact Us"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@android:color/transparent"
+        android:textColor="@color/blue"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="126dp"
+        tools:layout_editor_absoluteY="643dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
