moved new toast to last part of onItemClick to optimize UX, edited the same toast message.
cleanup done, standardizing most naming and used the following format

//attributes
//onCreate
//handlers
//onClick
//life cycles
//other functions

preferences = music_pref,game_pref

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="red">#ff0000</color>
     <color name="white"></color>
     <color name="home_bg">#fcfcfa</color>
+    <color name="blue">#0000FF</color>
 </resources>
