--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -8,15 +8,18 @@
     tools:context=".activity.CreditsActivity">
 
     <TextView
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/credits"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/credits"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textAlignment="center"/>
 
     <LinearLayout
+        android:layout_marginTop="40sp"
         android:id="@+id/Team8"
         app:layout_constraintTop_toBottomOf="@id/credits"
         android:layout_width="match_parent"
@@ -28,8 +31,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:text="Team 8 Members"
-            android:textSize="30dp"
-            android:textAlignment="center"/>
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
@@ -48,7 +52,7 @@
             android:layout_marginBottom="44dp"
             android:text="@string/members"
             android:textAlignment="center"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/team8Members"
             tools:layout_editor_absoluteX="0dp" />
     </LinearLayout>
@@ -64,8 +68,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/memberNames"
             android:text="@string/Licenses"
-            android:textSize="30dp"
-            android:textAlignment="center"/>
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
@@ -81,22 +86,22 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/licenseDetails"
             android:text="@string/lincense_detail"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textAlignment="center"/>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/contact"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/Bugs"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:orientation="horizontal">
-
-    </LinearLayout>
+        app:layout_constraintBottom_toTopOf="@+id/emailContact"
+        android:text="@string/bug_found"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
+        android:textStyle="italic"
+        />
 
     <Button
         android:id="@+id/emailContact"
@@ -104,6 +109,7 @@
         android:layout_height="50dp"
         android:text="Contact Us"
         android:textSize="25dp"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -111,7 +117,8 @@
         android:textColor="@color/blue"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:layout_editor_absoluteY="643dp"
+        android:textStyle="italic"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
